<resources>
    <string name="app_name">GufyGuber</string>
    <string name="server_client_id">564369732548-tupt8tu0bqpdvfihmolbts5kr9gd2rhh.apps.googleusercontent.com</string>
    <string name="api_key">AIzaSyAtsoVmhyaUqxW6g2v5IKb6ftaVTr4vWnA</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="user_type_message">Would you like to create an account as a RIDER or DRIVER?</string>
    <string name="user_type_fragment_title">Register</string>
    <string name="rider_tag">Rider</string>
    <string name="driver_tag">Driver</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="register_message">Almost there! We just need to confirm the last details of your user profile.
        You can change these at any time.</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="seat_number">Number of seats</string>
    <string name="plate_number">License Plate</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_map">Map</string>
    <string name="menu_current_requests">Current Requests</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact">Contact</string>
    <string name="fare_edittext_hint">Proposed Fare</string>
    <string name="fair_fair_default_hint">Fair Fare(TM): $13</string>
    <string name="edit_profile">Edit</string>
    <string name="save_profile">Save changes</string>
    <string name="request_status">Current ride request: %s</string>
    <string name="camera_rationale">Use of the camera is <b>required</b> to receive payment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
